--- a/source/less/blocks/catalog/product.less
+++ b/source/less/blocks/catalog/product.less
@@ -72,6 +72,11 @@
       top: 50px;
     }
   }
+
+  @media (min-width: @desktop-width) {
+    width: 245px;
+    min-height: 431px;
+  }
 }
 
 .product__details {
@@ -124,6 +129,10 @@
 
   @media (min-width: @tablet-width) {
     width: 250px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 169px;
   }
 }
 
