--- a/source/less/blocks/form/form-list.less
+++ b/source/less/blocks/form/form-list.less
@@ -20,6 +20,28 @@
       column-gap: 32px;
     }
   }
+
+  @media (min-width: @desktop-width) {
+    &--cat {
+      width: 570px;
+    }
+
+    &--program {
+      width: 570px;
+    }
+
+    &--contacts {
+      width: 1220px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &--checkbox {
+      width: 1220px;
+      display: flex;
+      justify-content: space-between;
+    }
+  }
 }
 
 .form-list__item {
