--- a/source/less/blocks/catalog/catalog-list.less
+++ b/source/less/blocks/catalog/catalog-list.less
@@ -8,4 +8,9 @@
     grid-template-columns: 50% 50%;
     grid-column-gap: 30px;
   }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-column-gap: 20px;
+  }
 }
