--- a/source/less/blocks/catalog/gift.less
+++ b/source/less/blocks/catalog/gift.less
@@ -8,6 +8,12 @@
     width: 708px;
     min-height: 200px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: row-reverse;
+  }
 }
 
 .gift__wrapper {
@@ -26,6 +32,13 @@
     display: flex;
     flex-direction: row;
   }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: column;
+    width: 245px;
+    min-height: 289px;
+    margin: 0;
+  }
 }
 
 .gift__text {
@@ -38,5 +51,9 @@
 
   @media (min-width: @tablet-width) {
     text-align: end;
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: center;
   }
 }
