--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -17,9 +17,12 @@
     flex-direction: row;
     justify-content: space-between;
     margin-top: 50px;
-    background-image: url("../img/desktop/index-background.png");
-    background-repeat: no-repeat;
-    background-position: right;
+
+    &--index {
+      background-image: url("../img/desktop/index-background.png");
+      background-repeat: no-repeat;
+      background-position: right;
+    }
   }
 }
 
