--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -78,11 +78,14 @@
   }
 
   @media (min-width: @desktop-width) {
-    color: @white;
     font-size: 20px;
     line-height: 30px;
 
-    &--current {
+    &--index {
+      color: @white;
+    }
+
+    &--current-desktop {
       border-bottom: 2px solid @white;
     }
   }
