--- a/source/less/style.less
+++ b/source/less/style.less
@@ -35,6 +35,7 @@
 @import "./blocks/catalog/product-last.less";
 @import "./blocks/catalog/product-button.less";
 @import "./blocks/catalog/product-button-last.less";
+@import "./blocks/catalog/additional-gift-wrapper.less";
 @import "./blocks/catalog/additional-goods.less";
 @import "./blocks/catalog/gift.less";
 @import "./blocks/variables.less";
