--- a/source/less/blocks/catalog/product-text.less
+++ b/source/less/blocks/catalog/product-text.less
@@ -6,7 +6,7 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 7px;
     padding-bottom: 9px;
-    border-bottom: 1px solid #cdcdcd;
+    border-bottom: 1px solid @grey;
 
     &--last {
       border: none;
