--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -13,6 +13,8 @@
 
   @media (min-width: @desktop-width) {
     position: relative;
+    margin: 0 auto;
+    width: 1220px;
   }
 }
 
@@ -75,7 +77,7 @@
     min-height: 198px;
     position: absolute;
     top: 120px;
-    left: 240px;
+    left: -1px;
     background-color: @white;
   }
 }
