--- a/source/less/blocks/catalog/product.less
+++ b/source/less/blocks/catalog/product.less
@@ -24,47 +24,47 @@
       border: 2px solid @basic-grey;
     }
 
-    &:nth-child(1)::before {
-      content: url("../img/tablet/catalog/chiken500.png");
-      position: absolute;
-      top: -44px;
-    }
+    // &:nth-child(1)::before {
+    //   content: url("../img/tablet/catalog/chiken500.png");
+    //   position: absolute;
+    //   top: -44px;
+    // }
 
-    &:nth-child(2)::before {
-      content: url("../img/tablet/catalog/chiken1000.png");
-      position: absolute;
-      top: -72px;
-    }
+    // &:nth-child(2)::before {
+    //   content: url("../img/tablet/catalog/chiken1000.png");
+    //   position: absolute;
+    //   top: -72px;
+    // }
 
-    &:nth-child(3)::before {
-      content: url("../img/tablet/catalog/fish500.png");
-      position: absolute;
-      top: -44px;
-    }
+    // &:nth-child(3)::before {
+    //   content: url("../img/tablet/catalog/fish500.png");
+    //   position: absolute;
+    //   top: -44px;
+    // }
 
-    &:nth-child(4)::before {
-      content: url("../img/tablet/catalog/fish1000.png");
-      position: absolute;
-      top: -72px;
-    }
+    // &:nth-child(4)::before {
+    //   content: url("../img/tablet/catalog/fish1000.png");
+    //   position: absolute;
+    //   top: -72px;
+    // }
 
-    &:nth-child(5)::before {
-      content: url("../img/tablet/catalog/buckwheat500.png");
-      position: absolute;
-      top: -44px;
-    }
+    // &:nth-child(5)::before {
+    //   content: url("../img/tablet/catalog/buckwheat500.png");
+    //   position: absolute;
+    //   top: -44px;
+    // }
 
-    &:nth-child(6)::before {
-      content: url("../img/tablet/catalog/buckwheat1000.png");
-      position: absolute;
-      top: -72px;
-    }
+    // &:nth-child(6)::before {
+    //   content: url("../img/tablet/catalog/buckwheat1000.png");
+    //   position: absolute;
+    //   top: -72px;
+    // }
 
-    &:nth-child(7)::before {
-      content: url("../img/tablet/catalog/rice500.png");
-      position: absolute;
-      top: -44px;
-    }
+    // &:nth-child(7)::before {
+    //   content: url("../img/tablet/catalog/rice500.png");
+    //   position: absolute;
+    //   top: -44px;
+    // }
 
     &:nth-child(8)::before {
       content: url("../img/tablet/catalog/plus-icon.svg");
@@ -119,7 +119,8 @@
   width: 140px;
 
   @media (min-width: @tablet-width) {
-    display: none;
+    position: absolute;
+    top: -40px;
   }
 }
 
