--- a/source/less/blocks/catalog/product-last.less
+++ b/source/less/blocks/catalog/product-last.less
@@ -7,7 +7,7 @@
   text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
-    margin-top: 161px;
+    margin-top: 216px;
     font-size: 20px;
     line-height: 22px;
     width: 150px;
@@ -19,4 +19,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.product-last__icon {
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
