--- a/source/less/blocks/index/advantages.less
+++ b/source/less/blocks/index/advantages.less
@@ -56,22 +56,22 @@
   position: relative;
 
   &:nth-child(1)::after {
-    content: url(../img/advantages-icon-leaf.png);
+    content: url("../img/advantages-icon-leaf.png");
     position: absolute;
   }
 
   &:nth-child(2)::after {
-    content: url(../img/advantages-icon-water.png);
+    content: url("../img/advantages-icon-water.png");
     position: absolute;
   }
 
   &:nth-child(3)::after {
-    content: url(../img/advantages-icon-food.png);
+    content: url("../img/advantages-icon-food.png");
     position: absolute;
   }
 
   &:nth-child(4)::after {
-    content: url(../img/advantages-icon-clock.png);
+    content: url("../img/advantages-icon-clock.png");
     position: absolute;
   }
 
