--- a/source/less/blocks/index/hero.less
+++ b/source/less/blocks/index/hero.less
@@ -31,7 +31,7 @@
 
   @media (min-width: @desktop-width) {
     width: 1440px;
-    background-image: url(../img/desktop/index-hero-image.png);
+    background-image: url("../img/desktop/index-hero-image.png");
     background-position: 560px 27px;
     background-repeat: no-repeat;
     min-height: 550px;
