--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,5 +1,5 @@
 .main-nav {
-  width: 100%;
+  width: 320px;
   margin: 0;
   padding: 0;
   background-color: @white;
@@ -92,4 +92,8 @@
       border-bottom: 2px solid @white;
     }
   }
+}
+
+.main-nav__toggle {
+  display: none;
 }
