--- a/source/less/blocks/catalog/product.less
+++ b/source/less/blocks/catalog/product.less
@@ -120,7 +120,11 @@
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: -40px;
+    top: -70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    min-height: 206px;
   }
 }
 
