--- a/source/less/blocks/index/cat-slider.less
+++ b/source/less/blocks/index/cat-slider.less
@@ -1,12 +1,74 @@
 .cat-slider {
-  height: 256px;
-
   @media (min-width: @tablet-width) {
     background-color: #eaeaea;
-    width: 100%;
   }
 
   @media (min-width: @desktop-width) {
-    background-color: @basic-grey;
+    background-color: transparent;
+    position: relative;
+    top: -200px;
+    margin-bottom: -200px;
+  }
+}
+
+.cat-slider__wrapper {
+  width: 280px;
+  height: 256px;
+  position: relative;
+  display: flex;
+
+  @media (min-width: @tablet-width) {
+    width: 560px;
+    height: 512px;
+    margin: 0 auto;
+  }
+}
+
+.cat-slider__left {
+  background-image: url("../img/mobile/fat-cat.png");
+  background-repeat: no-repeat;
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/tablet/fat-cat.png");
+  }
+}
+
+.cat-slider__right {
+  background-image: url("../img/mobile/slim-cat.png");
+  background-position: right;
+  background-repeat: no-repeat;
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/tablet/slim-cat.png");
+  }
+}
+
+.cat-slider__scale {
+  position: absolute;
+  color: @brown;
+  left: 43%;
+
+  @media (max-width: @mobile-width-only) {
+    &--tablet {
+      display: none;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    left: 46%;
+
+    &--mobile {
+      display: none;
+    }
+  }
+}
+
+.cat-slider__image {
+  width: 140px;
+  height: 256px;
+
+  @media (min-width: @tablet-width) {
+    width: 280px;
+    height: 512px;
   }
 }
