--- a/source/less/blocks/index/example-costs.less
+++ b/source/less/blocks/index/example-costs.less
@@ -7,6 +7,7 @@
   @media (min-width: @tablet-width) {
     flex-direction: column;
     align-items: flex-end;
+    margin: 0;
   }
 
   @media (min-width: @desktop-width) {
