--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -20,7 +20,7 @@
 
   @media (min-width: @desktop-width) {
     background-color: @basic-grey;
-    padding-top: 70px;
+    min-height: 462px;
   }
 }
 
@@ -31,6 +31,7 @@
     display: flex;
     justify-content: space-between;
     width: 1220px;
+    margin-top: 70px;
   }
 }
 
@@ -45,6 +46,7 @@
   @media (min-width: @desktop-width) {
     width: 436px;
     min-height: 317px;
+    margin-left: 0;
   }
 }
 
