--- a/source/less/blocks/variables.less
+++ b/source/less/blocks/variables.less
@@ -15,6 +15,7 @@
 @dark-grey3: #222222;
 @color-error: #ff8282;
 @shadow-color: #c4c4c4;
+@brown: #666666;
 //shadows
 @shadow-normal: 0px 1px 3px rgba(0, 0, 0, 0.16);
 @shadow-hover: 0px 2px 4px rgba(0, 0, 0, 0.19);
