--- a/source/less/blocks/index/hero.less
+++ b/source/less/blocks/index/hero.less
@@ -52,7 +52,7 @@
       position: absolute;
       top: 0;
       left: 50%;
-      width: 50%;
+      width: 720px;
       height: 694px;
       background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/desktop/index-background.png");
       background-repeat: no-repeat;
