--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -1,5 +1,7 @@
 .example {
   background-color: #eaeaea;
+  min-height: 659px;
+  margin-top: -2px;
 
   @media (min-width: @tablet-width) {
     background-color: @white;
