--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -8,6 +8,7 @@
   gap: 15px;
   min-height: 62px;
   border-bottom: 1px solid #d9d9d9;
+  column-gap: 24px;
 
   @media (min-width: @tablet-width) {
     border: none;
@@ -16,6 +17,7 @@
 
 .social-list__item {
   color: @dark-grey2;
+  margin-top: 3px;
 
   @media (min-width: @tablet-width) {
     gap: 26px;
