--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -34,12 +34,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 95px;
+  min-height: 82px;
   border-bottom: 1px solid #d9d9d9;
 
   @media (min-width: @tablet-width) {
     border: none;
   }
+}
+
+.footer__logo-image {
+  margin-top: 20px;
 }
 
 .footer__social-icon {
