--- a/source/less/blocks/index/example-cards.less
+++ b/source/less/blocks/index/example-cards.less
@@ -1,7 +1,7 @@
 .example-cards {
-  margin: 0;
   display: flex;
   justify-content: space-between;
+  margin: 0 22px;
 
   @media (min-width: @tablet-width) {
     width: 260px;
