--- a/source/less/blocks/index/hero.less
+++ b/source/less/blocks/index/hero.less
@@ -11,7 +11,7 @@
       background-repeat: no-repeat;
       background-size: cover;
       width: 320px;
-      height: 320px;
+      height: 302px;
       z-index: -1;
       position: absolute;
     }
@@ -122,7 +122,10 @@
   color: @white;
   background-color: @green;
   min-width: 280px;
-  min-height: 44px;
+  min-height: 40px;
+  font-size: 14px;
+  line-height: 18px;
+  margin-top: -4px;
 
   @media (min-width: @tablet-width) {
     position: relative;
