--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -123,7 +123,7 @@
     background-repeat: no-repeat;
     position: absolute;
     top: 35px;
-    left: 10px;
+    left: 14px;
 
     @media (min-width: @tablet-width) {
       content: "";
@@ -159,6 +159,14 @@
   text-align: center;
   margin-left: 20px;
 
+  &--slim {
+    margin-right: 9px;
+  }
+
+  &--mass {
+    margin-left: 40px;
+  }
+
   @media (min-width: @desktop-width) {
     font-size: 36px;
     line-height: 36px;
@@ -177,6 +185,7 @@
   margin-left: 20px;
   margin-top: 29px;
   padding-bottom: 23px;
+  margin-right: 20px;
   border-bottom: 1px solid #d9d9d9;
 
   @media (min-width: @tablet-width) {
@@ -235,7 +244,7 @@
   color: @black;
   font-weight: 400;
   margin: 0;
-  margin-left: 19px;
+  margin-left: 21px;
   margin-top: 19px;
   margin-bottom: 22px;
   align-self: start;
@@ -243,7 +252,8 @@
   &::after {
     content: url("../img/arrow-icon.svg");
     position: absolute;
-    margin-left: 12px;
+    margin-left: 15px;
+    top: -3px;
   }
 
   @media (min-width: @desktop-width) {
