--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -3,6 +3,7 @@
   width: 320px;
   background-image: url("../img/mobile/map.png");
   background-repeat: no-repeat;
+  position: relative;
 
   @media (min-width: @tablet-width) {
     width: 768px;
@@ -16,5 +17,12 @@
     height: 400px;
     background-image: url("../img/desktop/map.png");
     background-repeat: no-repeat;
+  }
+
+  &::after {
+    content: url("../img/mobile/map-pin.png");
+    position: absolute;
+    top: 138px;
+    left: 134px;
   }
 }
