--- a/source/less/blocks/index/cat-slider.less
+++ b/source/less/blocks/index/cat-slider.less
@@ -1,6 +1,8 @@
 .cat-slider {
   @media (min-width: @tablet-width) {
     background-color: #eaeaea;
+    margin-top: 250px;
+    height: 462px;
   }
 
   @media (min-width: @desktop-width) {
@@ -21,6 +23,8 @@
     width: 560px;
     height: 512px;
     margin: 0 auto;
+    position: relative;
+    top: -151px;
   }
 }
 
@@ -55,7 +59,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    left: 46%;
+    left: 260px;
 
     &--mobile {
       display: none;
