--- a/source/less/blocks/index/example-card.less
+++ b/source/less/blocks/index/example-card.less
@@ -20,6 +20,16 @@
     position: absolute;
     top: -16px;
     left: -43px;
+
+    @media (min-width: @tablet-width) {
+      content: "";
+      background-image: url("../img/mobile/example-border.svg");
+      width: 162px;
+      height: 72px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      left: -58px;
+    }
   }
 
   &--days::after {
@@ -27,6 +37,16 @@
     position: absolute;
     top: -16px;
     left: -20px;
+
+    @media (min-width: @tablet-width) {
+      content: "";
+      background-image: url("../img/mobile/example-border.svg");
+      width: 162px;
+      height: 72px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      left: -28px;
+    }
   }
 
 
@@ -34,6 +54,7 @@
     font-size: 30px;
     line-height: 37px;
     margin-top: 0;
+    margin-bottom: 11px;
   }
 }
 
@@ -54,5 +75,6 @@
     font-size: 14px;
     line-height: 14px;
     width: 125px;
+    background-color: @white;
   }
 }
