--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -24,5 +24,12 @@
     position: absolute;
     top: 138px;
     left: 134px;
+
+    @media (min-width: @tablet-width) {
+      content: url("../img/tablet/map-pin.png");
+      position: absolute;
+      top: 145px;
+      left: 333px;
+    }
   }
 }
