--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -32,6 +32,7 @@
     line-height: 26px;
     width: 450px;
     margin-left: 70px;
+    margin-top: -2px;
   }
 }
 
@@ -41,6 +42,7 @@
 
   @media (min-width: @tablet-width) {
     width: 310px;
+    margin-top: -10px;
   }
 }
 
@@ -68,9 +70,10 @@
   min-height: 112px;
 
   @media (min-width: @tablet-width) {
-    width: 708px;
+    width: 768px;
     justify-content: space-between;
     min-height: 199px;
+    gap: 55px;
   }
 
   @media (min-width: @desktop-width) {
