--- a/source/less/blocks/index/example-cards.less
+++ b/source/less/blocks/index/example-cards.less
@@ -4,7 +4,8 @@
   margin: 0 22px;
 
   @media (min-width: @tablet-width) {
-    width: 260px;
+    margin: 0 20px;
+    width: 327px;
   }
 
   @media (min-width: @desktop-width) {
