--- a/source/less/blocks/index/example-costs.less
+++ b/source/less/blocks/index/example-costs.less
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: flex-end;
     margin: 0;
+    margin-top: -10px;
   }
 
   @media (min-width: @desktop-width) {
