--- a/source/less/blocks/index/hero.less
+++ b/source/less/blocks/index/hero.less
@@ -18,10 +18,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    // background-image: url("../img/tablet/hero-background.png");
-    // background-position: bottom;
-    // background-repeat: no-repeat;
-    min-height: 868px;
+    height: 860px;
   }
 
   @media (min-width: @desktop-width) {
@@ -77,9 +74,9 @@
     line-height: 60px;
     color: @black;
     text-align: start;
-    margin-top: 62px;
+    margin-top: 51px;
     margin-bottom: 41px;
-    margin-left: 55px;
+    margin-left: 87px;
   }
 
   @media (min-width: @desktop-width) {
@@ -104,8 +101,8 @@
     font-size: 20px;
     line-height: 20px;
     color: @black;
-    margin-bottom: 49px;
-    margin-left: 55px;
+    margin-bottom: 21px;
+    margin-left: 89px;
   }
 
   @media (min-width: @desktop-width) {
@@ -131,10 +128,10 @@
     position: relative;
     font-size: 20px;
     line-height: 20px;
-    width: 244px;
+    min-width: 244px;
     min-height: 54px;
     top: -585px;
-    margin-left: 55px;
+    margin-left: 91px;
   }
 
   @media (min-width: @desktop-width) {
