--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -4,6 +4,10 @@
   align-items: center;
   margin: 0 auto;
 
+  @media (min-width: @tablet-width) {
+    row-gap: 30px;
+  }
+
   @media (min-width: @desktop-width) {
     width: 1220px;
     flex-direction: row;
@@ -23,6 +27,8 @@
   @media (min-width: @tablet-width) {
     width: 708px;
     min-height: 372px;
+    margin: 0;
+    padding: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -44,8 +50,8 @@
     @media (min-width: @tablet-width) {
       width: 200px;
       height: 200px;
-      top: 100px;
-      left: 450px;
+      top: 93px;
+      left: 446px;
     }
 
     @media (min-width: @desktop-width) {
@@ -73,8 +79,8 @@
       background-size: cover;
       width: 140.07px;
       height: 194px;
-      top: 90px;
-      left: 480px;
+      top: 82px;
+      left: 476px;
     }
 
     @media (min-width: @desktop-width) {
@@ -103,8 +109,8 @@
     @media (min-width: @tablet-width) {
       width: 200px;
       height: 200px;
-      top: 100px;
-      left: 450px;
+      top: 92px;
+      left: 446px;
     }
 
     @media (min-width: @desktop-width) {
@@ -131,8 +137,8 @@
       background-size: cover;
       width: 268.13px;
       height: 112.32px;
-      top: 150px;
-      left: 420px;
+      top: 136px;
+      left: 412px;
     }
 
     @media (min-width: @desktop-width) {
@@ -167,6 +173,14 @@
     margin-left: 40px;
   }
 
+  @media (min-width: @tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    text-align: start;
+    margin-top: 78px;
+    margin-left: 53px;
+  }
+
   @media (min-width: @desktop-width) {
     font-size: 36px;
     line-height: 36px;
@@ -189,9 +203,13 @@
   border-bottom: 1px solid #d9d9d9;
 
   @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
     border: none;
     width: 340px;
     position: relative;
+    margin-top: 24px;
+    margin-left: 52px;
 
     &--slim::after {
       content: url("../img/tablet/program-slim-icon.svg");
@@ -254,12 +272,16 @@
     position: absolute;
     margin-left: 15px;
     top: -3px;
+
+    @media (min-width: @tablet-width) {
+      margin-left: 25px;
+    }
   }
 
-  @media (min-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    margin-left: 52px;
-    margin-top: 27px;
+    margin-left: 54px;
+    margin-top: 29px;
   }
 }
