--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -10,7 +10,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    width: 510px;
+    width: 470px;
     min-height: 34px;
     position: static;
   }
@@ -31,12 +31,15 @@
   align-items: center;
 
   @media (min-width: @tablet-width) {
+    width: 475px;
+    position: relative;
+    top: 1px;
+    left: 31px;
     flex-direction: row;
   }
 }
 
 .main-nav__item {
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -52,10 +55,15 @@
     }
   }
 
+  @media (max-width: @mobile-width-only) {
+    width: 100%;
+  }
+
   @media (min-width: @tablet-width) {
     min-height: 34px;
     border: none;
     justify-content: flex-end;
+    margin-right: 34px;
   }
 }
 
