--- a/source/less/blocks/html-academy-logo.less
+++ b/source/less/blocks/html-academy-logo.less
@@ -8,6 +8,11 @@
     gap: 26px;
     margin-bottom: -6px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 17px;
+    margin-right: 2px;
+  }
 }
 
 .html-academy-logo__link {
