--- a/source/less/blocks/index/advantages.less
+++ b/source/less/blocks/index/advantages.less
@@ -55,7 +55,9 @@
 
   @media (min-width: @desktop-width) {
     min-height: 280px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 230px 230px 230px 241px;
+    column-gap: 95px;
+    grid-template-rows: auto;
   }
 }
 
