--- a/source/less/blocks/index/example-card.less
+++ b/source/less/blocks/index/example-card.less
@@ -77,4 +77,8 @@
     width: 125px;
     background-color: @white;
   }
+
+  @media (min-width: @desktop-width) {
+    background-color: @basic-grey;
+  }
 }
