--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -6,6 +6,11 @@
   @media (min-width: @tablet-width) {
     background-color: @white;
   }
+
+  @media (min-width: @desktop-width) {
+    min-height: 0;
+    height: 597px;
+  }
 }
 
 .example__wrapper {
@@ -71,7 +76,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 436px;
+    width: 433px;
     min-height: 96px;
+    margin-bottom: 84px;
   }
 }
