--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -57,8 +57,8 @@
     @media (min-width: @desktop-width) {
       width: 100px;
       height: 100px;
-      top: 35px;
-      left: 35px;
+      top: 47px;
+      left: 52px;
     }
   }
 
@@ -90,8 +90,8 @@
       background-size: cover;
       width: 70.03px;
       height: 97px;
-      top: 30px;
-      left: 50px;
+      top: 41px;
+      left: 67px;
     }
   }
 
@@ -116,8 +116,8 @@
     @media (min-width: @desktop-width) {
       width: 100px;
       height: 100px;
-      top: 35px;
-      left: 35px;
+      top: 47px;
+      left: 52px;
     }
   }
 
@@ -148,8 +148,8 @@
       width: 134.06px;
       height: 56.16px;
       position: absolute;
-      top: 60px;
-      left: 20px;
+      top: 67px;
+      left: 34px;
     }
   }
 }
@@ -184,8 +184,7 @@
   @media (min-width: @desktop-width) {
     font-size: 36px;
     line-height: 36px;
-    padding-top: 50px;
-    margin-left: 150px;
+    margin-left: 214px;
   }
 }
 
@@ -241,8 +240,9 @@
 
     @media (min-width: @desktop-width) {
       margin-left: 52px;
-      margin-top: 39px;
+      margin-top: 71px;
       width: 457px;
+      padding: 0;
     }
   }
 
