--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -31,5 +31,10 @@
       top: 145px;
       left: 333px;
     }
+
+    @media (min-width: @desktop-width) {
+      top: 131px;
+      left: 907px;
+    }
   }
 }
