--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -14,6 +14,10 @@
     border: none;
     margin-left: 38px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 22px;
+  }
 }
 
 .social-list__item {
