--- a/source/less/blocks/index/hero.less
+++ b/source/less/blocks/index/hero.less
@@ -22,8 +22,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    // background-image: none;
-    min-height: 640px;
+    height: 660px;
   }
 }
 
@@ -80,10 +79,10 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-left: 80px;
+    padding-left: 79px;
     margin: 0;
     margin-bottom: 41px;
-    margin-top: 110px;
+    margin-top: 107px;
   }
 }
 
@@ -136,7 +135,7 @@
 
   @media (min-width: @desktop-width) {
     margin-left: 80px;
-    top: -185px;
+    top: -187px;
   }
 }
 
@@ -152,8 +151,8 @@
     width: 552px;
     height: 499px;
     position: relative;
-    top: -310px;
-    left: 450px;
+    top: -311px;
+    left: 447px;
     margin-bottom: -310px;
   }
 }
