--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -32,6 +32,10 @@
     margin-top: -6px;
     margin-left: 1px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 7px;
+  }
 }
 
 .main-header__logo-link {
