--- a/source/less/blocks/index/hero.less
+++ b/source/less/blocks/index/hero.less
@@ -14,6 +14,12 @@
       height: 302px;
       z-index: -1;
       position: absolute;
+
+      @media (min-resolution: 2dppx) {
+        background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/mobile/hero-background-image.png");
+        width: 320px;
+        height: 302px;
+      }
     }
   }
 
@@ -53,6 +59,12 @@
       background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/desktop/index-background.png");
       background-repeat: no-repeat;
       background-size: cover;
+
+      @media (min-resolution: 2dppx) {
+        background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/desktop/index-background2x.png");
+        width: 720px;
+        height: 694px;
+      }
     }
   }
 }
