пиксель перфект страницы каталога

--- a/source/less/blocks/catalog/additional-gift-wrapper.less
+++ b/source/less/blocks/catalog/additional-gift-wrapper.less
@@ -1,10 +1,16 @@
 .additional-gift-wrapper {
+  margin-top: 24px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: -4px;
+  }
+
   @media (min-width: @desktop-width) {
     margin: 0 auto;
     width: 1220px;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    margin-bottom: 86px;
+    margin-bottom: 89px;
   }
 }
