--- a/source/less/blocks/catalog/product-button.less
+++ b/source/less/blocks/catalog/product-button.less
@@ -12,7 +12,9 @@
   @media (min-width: @tablet-width) {
     width: 248px;
     min-height: 40px;
-    margin-bottom: 39px;
+    margin: 0;
+    position: relative;
+    top: -38px;
   }
 
   @media (min-width: @desktop-width) {
