--- a/source/less/blocks/catalog/product-last.less
+++ b/source/less/blocks/catalog/product-last.less
@@ -7,7 +7,8 @@
   text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
-    margin-top: 216px;
+    margin-top: 160px;
+    margin-bottom: 25px;
     font-size: 20px;
     line-height: 22px;
     width: 150px;
@@ -22,6 +23,9 @@
 }
 
 .product-last__icon {
+  margin-top: -7px;
+  margin-bottom: 7px;
+
   @media (min-width: @tablet-width) {
     display: none;
   }
