--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -81,9 +81,10 @@
 .contacts__wrapper {
   display: flex;
   align-items: center;
-  width: 280px;
-  margin: 0 auto;
   min-height: 112px;
+  background-color: @basic-grey;
+  width: 100%;
+  justify-content: center;
 
   @media (min-width: @tablet-width) {
     width: 768px;
