--- a/source/less/blocks/catalog/additional-goods.less
+++ b/source/less/blocks/catalog/additional-goods.less
@@ -41,7 +41,13 @@
     margin-top: 68px;
     margin-bottom: 80px;
     border: none;
-    margin-left: 39px;
+    margin-left: 36px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 42px;
+    margin-bottom: 80px;
+    margin-left: 0;
   }
 }
 
@@ -53,13 +59,14 @@
 
 .additional-goods__list-item {
   border-bottom: 1px solid @basic-grey2;
+  margin-bottom: -1px;
 
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 140px;
+    min-height: 138px;
     border: 1px solid @grey;
 
     &:not(:last-child) {
@@ -70,7 +77,7 @@
   @media (min-width: @desktop-width) {
     flex-direction: row;
     justify-content: space-between;
-    min-height: 70px;
+    min-height: 71px;
     border-right: none;
     border-left: none;
   }
@@ -85,6 +92,11 @@
     justify-content: space-between;
     align-items: center;
     width: 632px;
+    margin-bottom: 14px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: -11px;
   }
 }
 
@@ -97,10 +109,15 @@
     justify-content: flex-end;
     width: 223px;
     gap: 50px;
+    margin-bottom: 3px;
+    margin-right: 6px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 0;
+    margin-bottom: 2px;
+    margin-right: 27px;
+    width: 279px;
+    justify-content: space-between;
   }
 }
 
@@ -118,6 +135,7 @@
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 20px;
+    margin-top: 3px;
   }
 }
 
@@ -147,6 +165,7 @@
   @media (min-width: @tablet-width) {
     width: 632px;
     min-height: 39px;
+    margin-bottom: 5px;
   }
 
   @media (min-width: @desktop-width) {
