--- a/source/less/blocks/catalog/catalog-title.less
+++ b/source/less/blocks/catalog/catalog-title.less
@@ -13,8 +13,12 @@
     font-size: 60px;
     line-height: 60px;
     padding: 0;
-    margin-top: 65px;
-    margin-bottom: 22px;
+    margin-top: 51px;
+    margin-bottom: 7px;
     border: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 72px;
   }
 }
