--- a/source/less/blocks/catalog/catalog.less
+++ b/source/less/blocks/catalog/catalog.less
@@ -1,6 +1,7 @@
 .catalog {
   width: 280px;
   margin: 0 auto;
+  min-height: 1775px;
 
   @media (min-width: @tablet-width) {
     width: 708px;
@@ -8,5 +9,6 @@
 
   @media (min-width: @desktop-width) {
     width: 1220px;
+    min-height: 1264px;
   }
 }
