--- a/source/less/blocks/catalog/product.less
+++ b/source/less/blocks/catalog/product.less
@@ -1,10 +1,10 @@
 .product {
   display: flex;
   flex-direction: column;
-  min-height: 170px;
+  min-height: 190px;
   border-bottom: 1px solid @basic-grey2;
   margin-top: 19px;
-  margin-bottom: 25px;
+  margin-bottom: -1px;
 
   @media (min-width: @tablet-width) {
     position: relative;
@@ -23,48 +23,6 @@
     &:last-child {
       border: 2px solid @basic-grey;
     }
-
-    // &:nth-child(1)::before {
-    //   content: url("../img/tablet/catalog/chiken500.png");
-    //   position: absolute;
-    //   top: -44px;
-    // }
-
-    // &:nth-child(2)::before {
-    //   content: url("../img/tablet/catalog/chiken1000.png");
-    //   position: absolute;
-    //   top: -72px;
-    // }
-
-    // &:nth-child(3)::before {
-    //   content: url("../img/tablet/catalog/fish500.png");
-    //   position: absolute;
-    //   top: -44px;
-    // }
-
-    // &:nth-child(4)::before {
-    //   content: url("../img/tablet/catalog/fish1000.png");
-    //   position: absolute;
-    //   top: -72px;
-    // }
-
-    // &:nth-child(5)::before {
-    //   content: url("../img/tablet/catalog/buckwheat500.png");
-    //   position: absolute;
-    //   top: -44px;
-    // }
-
-    // &:nth-child(6)::before {
-    //   content: url("../img/tablet/catalog/buckwheat1000.png");
-    //   position: absolute;
-    //   top: -72px;
-    // }
-
-    // &:nth-child(7)::before {
-    //   content: url("../img/tablet/catalog/rice500.png");
-    //   position: absolute;
-    //   top: -44px;
-    // }
 
     &:nth-child(8)::before {
       content: url("../img/tablet/catalog/plus-icon.svg");
@@ -105,10 +63,12 @@
   text-decoration: none;
   width: 76px;
   min-height: 41px;
+  margin-bottom: 17px;
 
   @media (min-width: @tablet-width) {
     width: 128px;
     text-align: center;
+    margin: 0;
   }
 }
 
@@ -117,14 +77,19 @@
   align-items: center;
   justify-content: center;
   width: 140px;
+  margin-top: 15px;
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    top: -70px;
+    top: -90px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     min-height: 206px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 5px;
   }
 }
 
@@ -155,5 +120,6 @@
     line-height: 24px;
     margin-top: 161px;
     margin-bottom: 21px;
+    width: 136px;
   }
 }
