--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -15,7 +15,7 @@
   border: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 24px;
+  margin-top: 28px;
 
   &--cat-data {
     border-bottom: 1px solid #d9d9d9;
@@ -36,6 +36,10 @@
     }
   }
 
+  &--textarea {
+    margin-top: 7px;
+  }
+
   @media (min-width: @tablet-width) {
     width: 631px;
   }
@@ -54,7 +58,7 @@
   line-height: 26px;
   font-weight: 400;
   color: @black;
-  margin-bottom: 35px;
+  margin-bottom: 32.5px;
   display: inline-block;
   position: relative;
 
@@ -64,6 +68,9 @@
     }
   }
 
+  &--textarea {
+    margin-bottom: 37px;
+  }
 
   @media (min-width: @tablet-width) {
     font-size: 36px;
@@ -80,6 +87,10 @@
     z-index: -1;
     right: calc(100% + 500px);
 
+    @media (max-width: @mobile-width-only) {
+      top: 25%;
+    }
+
     @media (min-width: @tablet-width) {
       right: calc(100% + 40px);
     }
@@ -95,10 +106,18 @@
     z-index: -1;
     left: calc(100% + 22px);
 
+    @media (max-width: @mobile-width-only) {
+      top: 25%;
+    }
+
     @media (min-width: @tablet-width) {
       left: calc(100% + 40px);
     }
   }
+}
+
+.form__wrapper-title--textarea::after {
+  top: 58.5%;
 }
 
 .form__input-button {
