--- a/source/less/blocks/form/form-textarea.less
+++ b/source/less/blocks/form/form-textarea.less
@@ -15,8 +15,9 @@
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    width: 604px;
-    min-height: 174px;
+    width: 599px;
+    min-height: 161px;
+    padding-left: 20px;
   }
 
   @media (min-width: @desktop-width) {
