--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -23,6 +23,10 @@
     @media (min-width: @tablet-width) {
       border: none;
     }
+
+    @media (min-width: @desktop-width) {
+      margin-top: 2px;
+    }
   }
 
   &--program {
@@ -33,22 +37,42 @@
       min-height: 164px;
       border: 1px solid #e7e7e7;
       padding-top: 30px;
+      margin-top: 42px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-top: 11px;
+      height: 165px;
     }
   }
 
   &--textarea {
     margin-top: 7px;
+
+    @media (min-width: @tablet-width) {
+      margin-top: 60px;
+      margin-bottom: 63px;
+    }
   }
 
   @media (min-width: @tablet-width) {
     width: 631px;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 570px;
+  }
 }
 
 .form__wrapper-desktop {
+  @media (min-width: @tablet-width) {
+    margin-bottom: 78px;
+  }
+
   @media (min-width: @desktop-width) {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 40px;
   }
 }
 
@@ -66,10 +90,22 @@
     @media (max-width: @mobile-width-only) {
       width: 187px;
     }
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 63.5px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 65.5px;
+    }
   }
 
   &--textarea {
     margin-bottom: 37px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 73px;
+    }
   }
 
   @media (min-width: @tablet-width) {
@@ -114,6 +150,10 @@
       left: calc(100% + 40px);
     }
   }
+
+  @media (min-width: @desktop-width) {
+    margin-left: -3px;
+  }
 }
 
 .form__wrapper-title--textarea::after {
@@ -130,11 +170,15 @@
     flex-direction: row;
     width: 631px;
     gap: 64px;
-    margin-top: 54px;
+    margin-left: 2px;
+    margin-top: 13px;
+    margin-bottom: 51px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 810px;
-    margin-bottom: 82px;
+    width: 830px;
+    margin-bottom: 61px;
+    margin-top: -17px;
+    margin-left: 0;
   }
 }
