--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,6 +6,7 @@
 @import "./blocks/index/hero.less";
 @import "./blocks/button.less";
 @import "./blocks/map.less";
+@import "./blocks/tablet-version-transfer.less";
 @import "./blocks/index/programs.less";
 @import "./blocks/index/promo.less";
 @import "./blocks/index/advantages.less";
