--- a/source/less/blocks/form/form-title.less
+++ b/source/less/blocks/form/form-title.less
@@ -15,6 +15,10 @@
     width: 433px;
     min-height: 60px;
     margin: 0;
-    margin-top: 30px;
+    margin-top: 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 72px;
   }
 }
