--- a/source/less/blocks/form/program-selection-text.less
+++ b/source/less/blocks/form/program-selection-text.less
@@ -9,4 +9,8 @@
   @media (min-width: @tablet-width) {
     font-size: 16px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 26px;
+  }
 }
